--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -10,6 +10,7 @@
     </style>
 
     <style name="BeatBoxButton" parent="android:Widget.Material.Button">
+        <item name="android:background">@drawable/beat_box_button</item>
     </style>
 
 </resources>
